<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HigherLowerActivity">

    <Button
        android:id="@+id/btnLower"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/lower"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnEquals"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnEquals"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/equals"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnHigher"
        app:layout_constraintStart_toEndOf="@+id/btnLower" />

    <Button
        android:id="@+id/btnHigher"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/higher"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnEquals" />

    <TextView
        android:id="@+id/lblTitle"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/title"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivDice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTitle"
        app:srcCompat="@drawable/dice1" />

    <TextView
        android:id="@+id/lblLastThrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/last_throw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivDice" />

</androidx.constraintlayout.widget.ConstraintLayout>